Big theme update

--- a/demo/src/pages/site-index.mdx
+++ b/demo/src/pages/site-index.mdx
@@ -3,10 +3,16 @@ title: Hello page!
 path: /
 ---
 
+import { Styled } from 'theme-ui';
 import Layout from '@fionawhim-site/gatsby-theme-blog/src/components/layout'
 import LatestBlogPosts from '@fionawhim-site/gatsby-theme-blog/src/components/latest-blog-posts'
 export default Layout
 
+<section className="main">
 
-<h2>Latest Posts</h2>
+## Latest Posts
+
 <LatestBlogPosts />
+
+</section>
+
