Upgrade to Gatsby 3

--- a/demo/src/pages/site-index.mdx
+++ b/demo/src/pages/site-index.mdx
@@ -3,10 +3,9 @@ title: Hello page!
 path: /
 ---
 
-import { Styled } from 'theme-ui';
-import Layout from '@fionawhim-site/gatsby-theme-blog/src/components/layout'
-import LatestBlogPosts from '@fionawhim-site/gatsby-theme-blog/src/components/latest-blog-posts'
-export default Layout
+import Layout from '@fionawhim-site/gatsby-theme-blog/src/components/layout';
+import LatestBlogPosts from '@fionawhim-site/gatsby-theme-blog/src/components/latest-blog-posts';
+export default Layout;
 
 <section className="main">
 
@@ -15,4 +14,3 @@ export default Layout
 <LatestBlogPosts />
 
 </section>
-
